# sync-engine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  docker-compose.yml
examples/: basic_usage.rs  basic_usage_capture.txt  basic_usage_example_capture.txt
scripts/: clear.sh  redis-search.sh  redisearch-index.sh  redisearch-query.sh  show-records.sh  sql-search.sh
src/: backpressure.rs  compaction.rs  compression.rs  config.rs  coordinator.rs  lib.rs  metrics.rs  submit_options.rs  sync_item.rs
src/batching/: hybrid_batcher.rs  mod.rs
src/cdc/: mod.rs
src/coordinator/: api.rs  flush.rs  lifecycle.rs  merkle_api.rs  mod.rs  schema_api.rs  search_api.rs  types.rs
src/cuckoo/: filter_manager.rs  filter_persistence.rs  mod.rs
src/eviction/: mod.rs  redis.rs  tan_curve.rs
src/merkle/: cache_store.rs  mod.rs  path_tree.rs  redis_store.rs  sql_store.rs
src/priority/: mod.rs  sync_queue.rs
src/resilience/: circuit_breaker.rs  mod.rs  retry.rs  wal.rs
src/schema/: mod.rs
src/search/: index_manager.rs  mod.rs  query_builder.rs  redis_translator.rs  search_cache.rs  sql_translator.rs
src/storage/: memory.rs  mod.rs  redis.rs  sql.rs  traits.rs
tests/: chaos.rs  integration.rs  proptest_fuzz.rs
