[package]
name = "sync-engine"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable OpenTelemetry trace context propagation helpers
otel = ["tracing-opentelemetry", "opentelemetry"]
# Enable CRDT-aware compaction and merge semantics
crdt = ["dep:crdt-data-types"]
# Enable transparent zstd compression for L3 storage
compression = ["dep:zstd"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
tracing = "0.1"
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", optional = true }
metrics = "0.22"
recloser = "1"
priority-queue = "2"
sha2 = "0.10"
hex = "0.4"
multihash = "0.19"
notify = "6"
config = "0.14"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "sqlite", "json"] }
thiserror = "1"
async-trait = "0.1"
parking_lot = "0.12"
expandable-cuckoo-filter = "0.1"

# From workspace crates (assuming crates.io for now as per brief)
crdt-data-types = { version = "0.1.3", optional = true }
zstd = { version = "0.13", optional = true }
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
testcontainers = "0.15"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.24.0"
