[package]
name = "sync-engine"
version = "0.2.0"
edition = "2021"
authors = ["Adrian Robinson <adrian.j.robinson@gmail.com>"]
description = "High-performance tiered sync engine with L1/L2/L3 caching and Redis/SQL backends"
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/transilluminate/sync-engine"
homepage = "https://github.com/transilluminate/sync-engine"
documentation = "https://docs.rs/sync-engine"
keywords = ["sync", "cache", "distributed", "redis", "mysql"]
categories = ["caching", "database", "data-structures", "concurrency"]
rust-version = "1.75"

[features]
default = []
# Enable OpenTelemetry trace context propagation helpers
otel = ["tracing-opentelemetry", "opentelemetry"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
dashmap = "6"
tracing = "0.1"
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", optional = true }
metrics = "0.22"
recloser = "1"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "sqlite", "json"] }
thiserror = "1"
async-trait = "0.1"
expandable-cuckoo-filter = "0.1"
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
rand = "0.8"

[dev-dependencies]
proptest = "1"
tokio-test = "0.4"
testcontainers = "0.15"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.24.0"
futures = "0.3"
metrics-util = "0.16"
